force-app/main/default/objects/Opportunity/fields/Asesor_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Tecnico__c</fullName>
    <label>Asesor Técnico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Martín Hernández</fullName>
            </value>
            <value>
                <fullName>Julio Cisneros</fullName>
            </value>
            <value>
                <fullName>Sergio Quiñones</fullName>
            </value>
            <value>
                <fullName>Luis Nava</fullName>
            </value>
            <value>
                <fullName>Felipe Noh</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>