force-app/main/default/objects/Opportunity/fields/Cedis__c.field-meta.xml
<CustomField>
    <fullName>Cedis__c</fullName>
    <label>Cedis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>