force-app/main/default/objects/Opportunity/fields/ciudad_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>ciudad_Proyecto__c</fullName>
    <label>Ciudad Proyecto</label>
    <length>30</length>
    <type>Text</type>
</CustomField>