force-app/main/default/objects/Opportunity/fields/clase__c.field-meta.xml
<CustomField>
    <fullName>clase__c</fullName>
    <label>Clase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Edificación</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Infraestructura</fullName>
            </value>
            <value>
                <fullName>Vivienda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>