force-app/main/default/objects/Opportunity/fields/codigo_postal_proyecto__c.field-meta.xml
<CustomField>
    <fullName>codigo_postal_proyecto__c</fullName>
    <label>Código Postal (Proyecto)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>