force-app/main/default/objects/Opportunity/fields/competencia__c.field-meta.xml
<CustomField>
    <fullName>competencia__c</fullName>
    <label>Competencia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>