force-app/main/default/objects/Opportunity/fields/Condiciones_de_pago__c.field-meta.xml
<CustomField>
    <fullName>Condiciones_de_pago__c</fullName>
    <label>Condiciones de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CondicionesPago</valueSetName>
    </valueSet>
</CustomField>