force-app/main/default/objects/Opportunity/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>