force-app/main/default/objects/Opportunity/fields/Descripci_n_del_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_del_Proyecto__c</fullName>
    <description>Descripción del proyecto de BIMSA</description>
    <label>Descripción del Proyecto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>