force-app/main/default/objects/Opportunity/fields/Detalle_de_P_rdida__c.field-meta.xml
<CustomField>
    <fullName>Detalle_de_P_rdida__c</fullName>
    <label>Detalle de Pérdida</label>
    <length>255</length>
    <type>Text</type>
</CustomField>