force-app/main/default/objects/Opportunity/fields/DiasSinActividad__c.field-meta.xml
<CustomField>
    <fullName>DiasSinActividad__c</fullName>
    <formula>DATEVALUE(NOW())- LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias sin actividad</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>