force-app/main/default/objects/Opportunity/fields/direccion_del_proyecto__c.field-meta.xml
<CustomField>
    <fullName>direccion_del_proyecto__c</fullName>
    <label>Dirección del Proyecto</label>
    <type>TextArea</type>
</CustomField>