force-app/main/default/objects/Opportunity/fields/Especificador__c.field-meta.xml
<CustomField>
    <fullName>Especificador__c</fullName>
    <label>Especificador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alberto Juárez</fullName>
            </value>
            <value>
                <fullName>José Ramírez</fullName>
            </value>
            <value>
                <fullName>Pilar Antonio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>