force-app/main/default/objects/Opportunity/fields/Estatus_de_Actividad__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_Actividad__c</fullName>
    <formula>IF(   ISNULL( LastActivityDate )  = true,&quot;No tiene actividades registradas&quot;,&quot;Con actividades registradas&quot;)</formula>
    <label>Estatus de Actividad</label>
    <type>Text</type>
</CustomField>