force-app/main/default/objects/Opportunity/fields/Estatus_OP__c.field-meta.xml
<CustomField>
    <fullName>Estatus_OP__c</fullName>
    <label>Estatus OP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proyecto</fullName>
            </value>
            <value>
                <fullName>Especificación</fullName>
            </value>
            <value>
                <fullName>Propuesta Técnico-Comercial</fullName>
            </value>
            <value>
                <fullName>Cerrado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>