force-app/main/default/objects/Opportunity/fields/Etapa_participaci_n__c.field-meta.xml
<CustomField>
    <fullName>Etapa_participaci_n__c</fullName>
    <label>Etapa de participación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Publicación de la convocatoria</fullName>
            </value>
            <value>
                <fullName>Solicitud de acceso para la visita</fullName>
            </value>
            <value>
                <fullName>Visita a las instalaciones</fullName>
            </value>
            <value>
                <fullName>Junta de aclaraciones</fullName>
            </value>
            <value>
                <fullName>Presentación y apertura de proposiciones</fullName>
            </value>
            <value>
                <fullName>Notificación de Fallo</fullName>
            </value>
            <value>
                <fullName>Firma de Contrato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>