force-app/main/default/objects/Opportunity/fields/Facturacion_1__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_1__c</fullName>
    <label>Facturacion 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>