force-app/main/default/objects/Opportunity/fields/Facturacion_2__c.field-meta.xml
<CustomField>
    <fullName>Facturacion_2__c</fullName>
    <label>Facturacion 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>