force-app/main/default/objects/Opportunity/fields/facturacion__c.field-meta.xml
<CustomField>
    <fullName>facturacion__c</fullName>
    <inlineHelpText>Número de factura con la que se gano la oportunidad</inlineHelpText>
    <label>Núm. Factura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>