force-app/main/default/objects/Opportunity/fields/False__c.field-meta.xml
<CustomField>
    <fullName>False__c</fullName>
    <defaultValue>false</defaultValue>
    <label>False</label>
    <type>Checkbox</type>
</CustomField>