force-app/main/default/objects/Opportunity/fields/Fecha_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_entrega__c</fullName>
    <formula>SyncedQuote.Fecha_de_entrega__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de entrega</label>
    <type>Date</type>
</CustomField>