force-app/main/default/objects/Opportunity/fields/fecha_de_termino_proyecto__c.field-meta.xml
<CustomField>
    <fullName>fecha_de_termino_proyecto__c</fullName>
    <label>Fecha de Termino (Proyecto)</label>
    <type>Date</type>
</CustomField>