force-app/main/default/objects/Opportunity/fields/fecha_inicio_proyecto__c.field-meta.xml
<CustomField>
    <fullName>fecha_inicio_proyecto__c</fullName>
    <label>Fecha Inicio (Proyecto)</label>
    <type>Date</type>
</CustomField>