force-app/main/default/objects/Opportunity/fields/fecha_publicacion__c.field-meta.xml
<CustomField>
    <fullName>fecha_publicacion__c</fullName>
    <label>Fecha Publicación</label>
    <type>Date</type>
</CustomField>