force-app/main/default/objects/Opportunity/fields/Gerente_de_Negocio__c.field-meta.xml
<CustomField>
    <fullName>Gerente_de_Negocio__c</fullName>
    <label>Gerente de Negocio</label>
    <type>Email</type>
</CustomField>