force-app/main/default/objects/Opportunity/fields/Gestor_Email__c.field-meta.xml
<CustomField>
    <fullName>Gestor_Email__c</fullName>
    <label>Gestor Email</label>
    <type>Email</type>
</CustomField>