force-app/main/default/objects/Opportunity/fields/ID_BIMSA__c.field-meta.xml
<CustomField>
    <fullName>ID_BIMSA__c</fullName>
    <label>ID BIMSA</label>
    <length>30</length>
    <type>Text</type>
</CustomField>