force-app/main/default/objects/Opportunity/fields/IMP_FechaCierreEsteMes1__c.field-meta.xml
<CustomField>
    <fullName>IMP_FechaCierreEsteMes1__c</fullName>
    <formula>IF(  AND( YEAR(CloseDate) =  YEAR(Today ()), MONTH(CloseDate) =  MONTH(Today ())), True, False)</formula>
    <label>Fecha de cierre este mes</label>
    <type>Checkbox</type>
</CustomField>