force-app/main/default/objects/Opportunity/fields/IMP_SemaforoProbabilidad__c.field-meta.xml
<CustomField>
    <fullName>IMP_SemaforoProbabilidad__c</fullName>
    <formula>IF(BEGINS(TEXT( StageName ), &quot;Perdida&quot; ),
IMAGE(&quot;/resource/IMP_Rojo&quot;, &quot;Rojo&quot;,20,20),
IF(BEGINS(TEXT( StageName ), &quot;Prospección&quot; ),
IMAGE(&quot;/resource/IMP_Naranja&quot;, &quot;Naranja&quot;,20,20),
IF(BEGINS(TEXT( StageName ), &quot;Evaluación Técnica&quot; ),
IMAGE(&quot;/resource/IMP_Naranja&quot;, &quot;Naranja&quot;,20,20),
IF(BEGINS(TEXT( StageName ), &quot;Cotización presentada&quot; ),
IMAGE(&quot;/resource/IMP_Amarillo&quot;, &quot;Amarillo&quot;,20,20),
IF(BEGINS(TEXT( StageName ), &quot;Primera revisión&quot; ),
IMAGE(&quot;/resource/IMP_Amarillo&quot;, &quot;Amarillo&quot;,20,20),
IF(BEGINS(TEXT( StageName ), &quot;Negociación&quot; ),
IMAGE(&quot;/resource/IMP_Verde&quot;, &quot;Verde&quot;,20,20),
IF(BEGINS(TEXT( StageName ), &quot;Segunda Revisión&quot; ),
IMAGE(&quot;/resource/IMP_Verde&quot;, &quot;Verde&quot;,20,20),
IF(BEGINS(TEXT( StageName ), &quot;Orden de Compra&quot; ),
IMAGE(&quot;/resource/IMP_Verde&quot;, &quot;Verde&quot;,20,20),
IF(BEGINS(TEXT( StageName ), &quot;Pendiente de Pago&quot; ),
IMAGE(&quot;/resource/IMP_Verde&quot;, &quot;Verde&quot;,20,20),
IF(BEGINS(TEXT( StageName ), &quot;Ganada&quot; ),
IMAGE(&quot;/resource/IMP_Verde&quot;, &quot;Verde&quot;,20,20),
null))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Semáforo Probabilidad</label>
    <type>Text</type>
</CustomField>