force-app/main/default/objects/Opportunity/fields/Importacion__c.field-meta.xml
<CustomField>
    <fullName>Importacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Este campo sirve para indicar si la oportunidad proviene de una base externa , y deberá marcarse en caso de que se quiera aplicar la regla</description>
    <label>Importación</label>
    <type>Checkbox</type>
</CustomField>