force-app/main/default/objects/Opportunity/fields/Importe_Ganado__c.field-meta.xml
<CustomField>
    <fullName>Importe_Ganado__c</fullName>
    <label>Importe Ganado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>