force-app/main/default/objects/Opportunity/fields/Industria__c.field-meta.xml
<CustomField>
    <fullName>Industria__c</fullName>
    <label>Tipo de Oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Estandar</fullName>
            </value>
            <value>
                <fullName>BIMSA</fullName>
            </value>
            <value>
                <fullName>Gobierno</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>