force-app/main/default/objects/Opportunity/fields/Informaci_n_de_Pedido__c.field-meta.xml
<CustomField>
    <fullName>Informaci_n_de_Pedido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Información de Pedido</label>
    <type>Checkbox</type>
</CustomField>