force-app/main/default/objects/Opportunity/fields/Inversion__c.field-meta.xml
<CustomField>
    <fullName>Inversion__c</fullName>
    <label>Inversión</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>