force-app/main/default/objects/Opportunity/fields/IsOportunidad_principal__c.field-meta.xml
<CustomField>
    <fullName>IsOportunidad_principal__c</fullName>
    <formula>ISBLANK( Oportunidad_principal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOportunidad principal</label>
    <type>Checkbox</type>
</CustomField>