force-app/main/default/objects/Opportunity/fields/Licitaci_n__c.field-meta.xml
<CustomField>
    <fullName>Licitaci_n__c</fullName>
    <label>Licitación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>