force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Razón de perdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calidad</fullName>
            </value>
            <value>
                <fullName>Cancelación del proyecto</fullName>
            </value>
            <value>
                <fullName>Competencia</fullName>
            </value>
            <value>
                <fullName>Datos de Contacto Incorrectos</fullName>
                <label>Datos de contacto incorrectos</label>
            </value>
            <value>
                <fullName>Disponibilidad de Material</fullName>
            </value>
            <value>
                <fullName>No responde</fullName>
            </value>
            <value>
                <fullName>Precio</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Sin presupuesto</fullName>
            </value>
            <value>
                <fullName>Sólo buscaba cotizar</fullName>
            </value>
            <value>
                <fullName>No esta interesado</fullName>
            </value>
            <value>
                <fullName>Duplicado</fullName>
            </value>
            <value>
                <fullName>Facturado en otra sucursal.</fullName>
            </value>
            <value>
                <fullName>Error en la gestión</fullName>
            </value>
            <value>
                <fullName>Especificación</fullName>
            </value>
            <value>
                <fullName>Política</fullName>
            </value>
            <value>
                <fullName>Desierta (Se convoca nuevamente)</fullName>
            </value>
            <value>
                <fullName>Falta de Documentación</fullName>
            </value>
            <value>
                <fullName>Falta de Información</fullName>
            </value>
            <value>
                <fullName>Compro con Distribuidor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>