force-app/main/default/objects/Opportunity/fields/Materiales_Trabajos_por_cotizar__c.field-meta.xml
<CustomField>
    <fullName>Materiales_Trabajos_por_cotizar__c</fullName>
    <label>Materiales/ Trabajos por cotizar</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>