force-app/main/default/objects/Opportunity/fields/Mes_1__c.field-meta.xml
<CustomField>
    <fullName>Mes_1__c</fullName>
    <label>Mes 1</label>
    <type>Date</type>
</CustomField>