force-app/main/default/objects/Opportunity/fields/Mes_2__c.field-meta.xml
<CustomField>
    <fullName>Mes_2__c</fullName>
    <label>Mes 2</label>
    <type>Date</type>
</CustomField>