force-app/main/default/objects/Opportunity/fields/Negocio__c.field-meta.xml
<CustomField>
    <fullName>Negocio__c</fullName>
    <label>Negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>B2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>