force-app/main/default/objects/Opportunity/fields/numero_de_unidades__c.field-meta.xml
<CustomField>
    <fullName>numero_de_unidades__c</fullName>
    <label>Número de Unidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>