force-app/main/default/objects/Opportunity/fields/OC__c.field-meta.xml
<CustomField>
    <fullName>OC__c</fullName>
    <label>OC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>