force-app/main/default/objects/Opportunity/fields/Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad__c</fullName>
    <displayFormat>OP-{000000}</displayFormat>
    <label># Oportunidad</label>
    <type>AutoNumber</type>
</CustomField>