force-app/main/default/objects/Opportunity/fields/Oportunidad_Abierta__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Abierta__c</fullName>
    <formula>IF( OR( TEXT( StageName )=&quot;Prospección&quot;,TEXT( StageName )=&quot;Evaluación Técnica&quot;,TEXT( StageName )=&quot;Cotización presentada&quot;,TEXT( StageName )=&quot;Primera revisión&quot;,TEXT( StageName )=&quot;Negociación&quot;,TEXT( StageName )=&quot;Segunda Revisión&quot;,TEXT( StageName )=&quot;Orden de Compra&quot;,TEXT( StageName )=&quot;Pendiente de Pago&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidad Abierta</label>
    <type>Checkbox</type>
</CustomField>