force-app/main/default/objects/Opportunity/fields/Oportunidad_Atrasada__c.field-meta.xml
<CustomField>
    <fullName>Oportunidad_Atrasada__c</fullName>
    <formula>IF( CloseDate   &lt;   DATEVALUE(NOW()),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Oportunidad Atrasada</label>
    <type>Checkbox</type>
</CustomField>