force-app/main/default/objects/Opportunity/fields/payment_terms__c.field-meta.xml
<CustomField>
    <fullName>payment_terms__c</fullName>
    <label>Forma de pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Forma_de_pago</valueSetName>
    </valueSet>
</CustomField>