force-app/main/default/objects/Opportunity/fields/pedido__c.field-meta.xml
<CustomField>
    <fullName>pedido__c</fullName>
    <label>Pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>