force-app/main/default/objects/Opportunity/fields/Perdida__c.field-meta.xml
<CustomField>
    <fullName>Perdida__c</fullName>
    <formula>IF(OR(AND(TEXT( StageName )=&quot;Perdida&quot;, Valid_Perdida__c =true, Validar_Raz_n_adicional__c =true),AND(TEXT( StageName )=&quot;Perdida&quot;, Valid_Perdida__c =true, Validar_Raz_n_adicional__c =false),AND(TEXT( StageName )=&quot;Perdida&quot;, Valid_Perdida__c =false, Validar_Raz_n_adicional__c =true)),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perdida</label>
    <type>Checkbox</type>
</CustomField>