force-app/main/default/objects/Opportunity/fields/PrecioTotal__c.field-meta.xml
<CustomField>
    <fullName>PrecioTotal__c</fullName>
    <label>Precio total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>