force-app/main/default/objects/Opportunity/fields/Proyecto_Obra_Privada__c.field-meta.xml
<CustomField>
    <fullName>Proyecto_Obra_Privada__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proyecto Obra Privada</label>
    <referenceTo>Proyecto_Obra_Privada__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>