force-app/main/default/objects/Opportunity/fields/Requiereaprobacion__c.field-meta.xml
<CustomField>
    <fullName>Requiereaprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Requiere aprobación?</label>
    <type>Checkbox</type>
</CustomField>