force-app/main/default/objects/Opportunity/fields/Revisado__c.field-meta.xml
<CustomField>
    <fullName>Revisado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmar a que oportunidad ya se hizo un primer acercamiento</description>
    <label>Revisado</label>
    <type>Checkbox</type>
</CustomField>