force-app/main/default/objects/Opportunity/fields/sector__c.field-meta.xml
<CustomField>
    <fullName>sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gobierno</fullName>
            </value>
            <value>
                <fullName>Privado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>