force-app/main/default/objects/Opportunity/fields/Sector_espe__c.field-meta.xml
<CustomField>
    <fullName>Sector_espe__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vivienda.</fullName>
            </value>
            <value>
                <fullName>Hoteleria</fullName>
            </value>
            <value>
                <fullName>Estacionamiento</fullName>
            </value>
            <value>
                <fullName>Vivienda Vertical</fullName>
            </value>
            <value>
                <fullName>Oficinas</fullName>
            </value>
            <value>
                <fullName>Gobierno</fullName>
            </value>
            <value>
                <fullName>Infraestructura</fullName>
            </value>
            <value>
                <fullName>Entretenimiento</fullName>
            </value>
            <value>
                <fullName>Eduacacion</fullName>
            </value>
            <value>
                <fullName>Vivienda</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Turismo</fullName>
            </value>
            <value>
                <fullName>Salud</fullName>
            </value>
            <value>
                <fullName>Desarrollador</fullName>
            </value>
            <value>
                <fullName>Vivienda Residencial</fullName>
            </value>
            <value>
                <fullName>Residecial</fullName>
            </value>
            <value>
                <fullName>Concreto</fullName>
            </value>
            <value>
                <fullName>Automotriz</fullName>
            </value>
            <value>
                <fullName>Alimenticio</fullName>
            </value>
            <value>
                <fullName>Energia</fullName>
            </value>
            <value>
                <fullName>Prefabricadora</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>