force-app/main/default/objects/Opportunity/fields/Soporte_tecnico__c.field-meta.xml
<CustomField>
    <fullName>Soporte_tecnico__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Se requiere soporte técnico</label>
    <type>Checkbox</type>
</CustomField>