force-app/main/default/objects/Opportunity/fields/superficie_urbanizada__c.field-meta.xml
<CustomField>
    <fullName>superficie_urbanizada__c</fullName>
    <label>Superficie Urbanizada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>