force-app/main/default/objects/Opportunity/fields/Tipo_de_convenio__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_convenio__c</fullName>
    <label>Tipo de convenio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OXXO</fullName>
            </value>
            <value>
                <fullName>FDA</fullName>
            </value>
            <value>
                <fullName>FEMSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>