force-app/main/default/objects/Opportunity/fields/tipo_desarrollo__c.field-meta.xml
<CustomField>
    <fullName>tipo_desarrollo__c</fullName>
    <label>Tipo Desarrollo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Obra Nueva</fullName>
            </value>
            <value>
                <fullName>Adecuacion</fullName>
            </value>
            <value>
                <fullName>Remodelación</fullName>
            </value>
            <value>
                <fullName>Ampliación</fullName>
            </value>
            <value>
                <fullName>Rehabilitación</fullName>
            </value>
            <value>
                <fullName>Mantenimiento</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>