force-app/main/default/objects/Opportunity/fields/Total_sin_Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Total_sin_Impuesto__c</fullName>
    <formula>SyncedQuote.TotalPartidas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total sin Impuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>