force-app/main/default/objects/Opportunity/fields/TotalPartidas__c.field-meta.xml
<CustomField>
    <fullName>TotalPartidas__c</fullName>
    <label>Total</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>